| Summary: | ASTERISK-28552: res_pjsip_mwi: Frack during unload on unsolicited_mwi container | ||
| Reporter: | Kevin Harwell (kharwell) | Labels: | pjsip |
| Date Opened: | 2019-09-23 14:51:27 | Date Closed: | 2019-10-10 09:15:03 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_mwi |
| Versions: | 13.29.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) backtrace_1439.txt | |
| Description: | See attached [^backtrace_1439.txt], but it appears the unsolicited_mwi container is NULL when attempting to send the initial notifies. Just a guess, but it appears the container gets freed, then NULLed during unload, however it's still trying to send the notifies so c.
The unsolicited_mwi container might need to be turned into a global container. | ||
| Comments: | By: Corey Farrell (coreyfarrell) 2019-09-23 15:04:16.319-0500 Backtrace is from 13. Issue is unconfirmed in 16+ which might prevent it through more aggressive module reference counting enforcing a better unload order. By: Friendly Automation (friendly-automation) 2019-10-10 09:15:03.900-0500 Change 12998 merged by George Joseph: res_pjsip_mwi: use an ao2_global object for mwi containers [https://gerrit.asterisk.org/c/asterisk/+/12998|https://gerrit.asterisk.org/c/asterisk/+/12998] By: Friendly Automation (friendly-automation) 2019-10-10 09:16:09.238-0500 Change 13007 merged by George Joseph: res_pjsip_mwi: use an ao2_global object for mwi containers [https://gerrit.asterisk.org/c/asterisk/+/13007|https://gerrit.asterisk.org/c/asterisk/+/13007] By: Friendly Automation (friendly-automation) 2019-10-10 09:16:42.458-0500 Change 13006 merged by George Joseph: res_pjsip_mwi: use an ao2_global object for mwi containers [https://gerrit.asterisk.org/c/asterisk/+/13006|https://gerrit.asterisk.org/c/asterisk/+/13006] By: Friendly Automation (friendly-automation) 2019-10-10 09:17:19.269-0500 Change 13003 merged by George Joseph: res_pjsip_mwi: use an ao2_global object for mwi containers [https://gerrit.asterisk.org/c/asterisk/+/13003|https://gerrit.asterisk.org/c/asterisk/+/13003] | ||